--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: BerlinData
 Type: Package
-Title: What the package does (short line)
-Version: 1.0
+Title: Offers datasets and API access to Berlin related data
+Version: 1.0.0
 Date: 2014-03-14
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: ----
+Maintainer: Dirk Schumacher <mail@dirk-schumacher.net>
+Description: It is exactly what you think it is.
+License: GPLv3
