--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,14 +3,13 @@ Type: Package
 Title: Offers datasets and API access to Berlin related data
 Version: 0.0.0
 Date: 2014-03-14
-Author: ----
+Author: Kate McCurdy <...@...>, Dirk Schumacher <mail@dirk-schumacher.net>
 Maintainer: Dirk Schumacher <mail@dirk-schumacher.net>
 Description: It is exactly what you think it is.
 License: MIT
-LazyLoad: yes
-ZipData: yes
+Depends:
+    R (>= 2.13.0)
+Imports:
+    XML (>= 3.98-1.1)
 Suggests:
     testthat
-Depends:
-    R (>= 2.13.0),
-    XML
