--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,10 @@
 
 S3method(summary,berlin_data_list)
 S3method(summary,berlin_data_query_no_results)
+S3method(summary,berlin_data_resource)
 export(berlin_data)
+export(fetch.berlin_data_resource)
+export(load_metadata)
+export(resources.berlin_data_datasets)
 import(XML)
+import(stringr)
