--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,9 @@ S3method(resources,berlin_data_dataset)
 S3method(summary,berlin_data_list)
 S3method(summary,berlin_data_query_no_results)
 S3method(summary,berlin_data_resource)
-export(berlin_data)
 export(download)
-export(load_metadata)
+export(parseMetaData)
 export(resources)
+export(searchBerlinData)
 import(XML)
 import(stringr)
