--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(getDatasetMetaData,berlin_data_dataset_info)
 S3method(getDatasetMetaData,berlin_data_list)
 S3method(getDatasetMetaData,character)
 S3method(resources,berlin_data_dataset)
+S3method(summary,berlin_data_dataset)
 S3method(summary,berlin_data_list)
 S3method(summary,berlin_data_query_no_results)
 S3method(summary,berlin_data_resource)
