--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,12 @@ S3method(summary,berlin_data_dataset)
 S3method(summary,berlin_data_list)
 S3method(summary,berlin_data_query_no_results)
 S3method(summary,berlin_data_resource)
+S3method(summary,berlin_data_resource_list)
 export(download)
 export(getDatasetMetaData)
 export(parseMetaData)
 export(resources)
 export(searchBerlinDatasets)
+export(updateCachedFeed)
 import(XML)
 import(stringr)
