- reorganize/add tests - add methods for berlin_data_dataset and berlin_data_dataset_info - improve filtering of null results in berlin_data*_list classes - gentler error handling in download.* methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("[",berlin_data_list)
 S3method("[",berlin_data_resource_list)
 S3method(as.data.frame,berlin_data_dataset)
+S3method(as.data.frame,berlin_data_dataset_info)
 S3method(as.data.frame,berlin_data_list)
 S3method(as.data.frame,berlin_data_resource)
 S3method(as.data.frame,berlin_data_resource_list)
@@ -11,10 +12,12 @@ S3method(download,JSON)
 S3method(download,TXT)
 S3method(download,XML)
 S3method(download,berlin_data_dataset)
+S3method(download,berlin_data_dataset_info)
 S3method(download,berlin_data_list)
 S3method(download,berlin_data_resource)
 S3method(download,berlin_data_resource_list)
 S3method(download,default)
+S3method(getDatasetMetaData,berlin_data_dataset)
 S3method(getDatasetMetaData,berlin_data_dataset_info)
 S3method(getDatasetMetaData,berlin_data_list)
 S3method(getDatasetMetaData,character)
