Update minor things; Add a custom LICENSE file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Maintainer: Dirk Schumacher <mail@dirk-schumacher.net>
 Description: This package provides easy access to http://daten.berlin.de
     It allows you to search through the data catalogue and to download
     the data directly from within R.
-License: MIT
+License: MIT + file LICENSE
+URL: http://dirkschumacher.github.io/RBerlinData
 Depends:
     R (>= 2.13.0)
 Imports:
