Add a print function for all our classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,11 @@ S3method(getDatasetMetaData,berlin_data_dataset)
 S3method(getDatasetMetaData,berlin_data_dataset_info)
 S3method(getDatasetMetaData,berlin_data_list)
 S3method(getDatasetMetaData,character)
+S3method(print,berlin_data_dataset)
+S3method(print,berlin_data_list)
+S3method(print,berlin_data_query_no_results)
+S3method(print,berlin_data_resource)
+S3method(print,berlin_data_resource_list)
 S3method(resources,berlin_data_dataset)
 S3method(summary,berlin_data_dataset)
 S3method(summary,berlin_data_list)
