--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: BerlinData
 Type: Package
 Title: Easy access to Berlin related data
-Version: 1.0.0
-Date: 2014-03-14
+Version: 1.0.1
+Date: 2014-07-29
 Author: Kate McCurdy, Dirk Schumacher
 Maintainer: Dirk Schumacher <mail@dirk-schumacher.net>
 Description: This package provides easy access to http://daten.berlin.de
     It allows you to search through the data catalogue and to download
     the data directly from within R.
-License: MIT + file LICENSE
+License: GPL-3 + file LICENSE
 URL: http://dirkschumacher.github.io/RBerlinData
 Depends:
     R (>= 2.13.0)
